tests/ui/error-codes/E0057.stderr
error[E0057]: this function takes 1 argument but 0 arguments were supplied
  --> $DIR/E0057.rs:3:13
   |
LL |     let a = f();
   |             ^-- argument #1 is missing
   |
note: closure defined here
  --> $DIR/E0057.rs:2:13
   |
LL |     let f = |x| x * 3;
   |             ^^^
help: provide the argument
   |
LL |     let a = f(/* x */);
   |               +++++++

error[E0057]: this function takes 1 argument but 2 arguments were supplied
  --> $DIR/E0057.rs:5:13
   |
LL |     let c = f(2, 3);
   |             ^    - unexpected argument #2 of type `{integer}`
   |
note: closure defined here
  --> $DIR/E0057.rs:2:13
   |
LL |     let f = |x| x * 3;
   |             ^^^
help: remove the extra argument
   |
LL -     let c = f(2, 3);
LL +     let c = f(2);
   |

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0057`.
